fixed the overflow issue on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -12,9 +12,12 @@
   box-sizing: border-box;
 }
 
+html,
 body {
   font-size: 16px;
   font-family: 'Nunito', 'Inter', sans-serif;
+  height: 100vh;
+  height: 100dvh;
 }
 
 @layer components {
